fix spacing issue

--- a/themes/yinyang/assets/css/index.css
+++ b/themes/yinyang/assets/css/index.css
@@ -291,7 +291,9 @@ a:hover {
     display: none;
   }
 }
-
+.header-item {
+  margin-right: 5px;
+}
 .header-item:after {
   content: '/';
 }
